tests/ui/ferrocene/compiler-arguments/upper_c_linker/upper_c_linker_space-empty.rs
//@ check-fail
//@ compile-flags: -C linker
//~? ERROR requires a path

fn main() {}

// ferrocene-annotations: um_rustc_C_linker
